@@ -8,6 +8,8 @@ with respect to new features and compatibility changes.
  * Made the algolia search code a bit more elegant to make it easier to implement their recommended retry strategy.
  * Wing::Algolia has been updated to cycle through 4 different URLs for redundancy.
  * Wing::Rest generate_relationship with named_options "queryable" now does a full wildcard search again.
+ * Wrote the documentation for Wing::Util.
+ * Added Wing::Role::Result::Trigram and associated utilities to enable fast substring searching in large tables.
  * Fixed: Can't use an undefined value as an ARRAY reference at /data/Wing/lib/Wing/Rest.pm line 158.
 
 2020-09-29
